shiny-server 1.5.20
--------------------------------------------------------------------------------

* Support hosting of prerendered Quarto `server: shiny` interactive documents.
  Prerender the document before uploading by running `quarto serve index.qmd`,
  then deploy the generated index.html, index_files directory, and the source
  index.qmd together to be served by Shiny Server.

shiny-server 1.5.19
--------------------------------------------------------------------------------

* Support hosting of Shiny for Python apps. For more information, see:
  https://shiny.rstudio.com/py/docs/deploy.html

shiny-server 1.5.18
--------------------------------------------------------------------------------

* Upgrade Node.js to 16.14.0.

shiny-server 1.5.17
--------------------------------------------------------------------------------

* `app_dir` config directives pointing to missing or unreadable directories on
  disk were causing errors during routing, even for requests intended for
  unrelated apps.

* Fix an issue where entire R processes would leak if: 1) they ever called
  `reticulate::source_python()`, and 2) were running at the time that Shiny
  Server stopped (or restarted). Both conditions were required to trigger the
  leak.

* Upgrade Node.js to 12.22.6.

* Major upgrade to SockJS client (from 0.3.4 to 1.5.0). Technically, this adds
  two new SockJS protocols, `eventsource` and `htmlfile`, but the vast majority
  of admins shouldn't need to think about this. (The new protocols will be used
  automatically if necessary, unless either they or the older SockJS protocols
  `iframe-eventsource` and `iframe-htmlfile` are disabled in shiny-server.conf
  using the `disable_protocols` directive.)

shiny-server 1.5.16
--------------------------------------------------------------------------------

* SECURITY: Fix a serious vulnerability where maliciously formed URLs can result
  in source code disclosure. Please upgrade as soon as possible!
