@@ -247,12 +247,14 @@ function SingleAppRouter(appdir, runas, prefix, logDir, settings) {
       var app = _.find(files, function(entry) {
         return /^server\.r$/i.test(entry);
       });
-
       var singleApp = _.find(files, function(entry) {
         return /^app\.r$/i.test(entry);
       });
       var rmd = _.find(files, function(entry) {
         return /\.[rq]md$/i.test(entry);
+      });
+      var pyApp = _.find(files, function(entry) {
+        return /^app\.py$/.test(entry);
       });
       var indexRmd = _.find(files, function(entry) {
         if (/^index\.[rq]md$/i.test(entry)){
@@ -296,6 +298,8 @@ function SingleAppRouter(appdir, runas, prefix, logDir, settings) {
           .done();
           return true;
         }
+      } else if (pyApp) {
+        appSpec.settings.mode = "shiny-python";
       } else{
         // No app found.
       }
